force-app/main/default/objects/Certifictaion_Request__c/Certifictaion_Request__c.object-meta.xml
<CustomObject>
    <label>Certifictaion Request</label>
    <nameField>
        <displayFormat>MN-{000}</displayFormat>
        <label>Management Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>