force-app/main/default/objects/Certifictaion_Request__c/fields/Aspirant__c.field-meta.xml
<CustomField>
    <fullName>Aspirant__c</fullName>
    <label>Aspirant</label>
    <referenceTo>Aspirant__c</referenceTo>
    <relationshipLabel>Certification Requests</relationshipLabel>
    <relationshipName>Certification_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>