force-app/main/default/objects/Certifictaion_Request__c/fields/Aspirant_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Aspirant_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>App User should not be able to add new certification voucher request in system if there is any pending request exist for that employee</description>
    <label>Aspirant Validation Rule</label>
    <type>Checkbox</type>
</CustomField>