force-app/main/default/objects/Certifictaion_Request__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Certification Requests</relationshipLabel>
    <relationshipName>Certification_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>