force-app/main/default/objects/Certifictaion_Request__c/fields/Voucher_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>App User should not be able to raise same certification voucher request again if one already exist in the system</description>
    <label>Voucher Validation Rule</label>
    <type>Checkbox</type>
</CustomField>