force-app/main/default/objects/Certifictaion_Request__c/validationRules/Aspirant_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Aspirant_Validation_Rule</fullName>
    <active>true</active>
    <description>App User should not be able to add new certification voucher request in system if there is any pending request exist for that employee.</description>
    <errorConditionFormula>Aspirant_Validation_Rule__c  = true</errorConditionFormula>
    <errorDisplayField>Aspirant__c</errorDisplayField>
    <errorMessage>This Employee already has a pending request for other certification.</errorMessage>
</ValidationRule>