force-app/main/default/objects/Certifictaion_Request__c/validationRules/Voucher_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Voucher_Validation_Rule</fullName>
    <active>true</active>
    <description>App User should not be able to raise same certification voucher request again if one already exist in the system</description>
    <errorConditionFormula>Voucher_Validation_Rule__c  = true</errorConditionFormula>
    <errorDisplayField>Voucher__c</errorDisplayField>
    <errorMessage>You cannot create a certification request for Voucher ID as it is already linked to other certification request.</errorMessage>
</ValidationRule>